--- a/src/index.css
+++ b/src/index.css
@@ -159,3 +159,9 @@ body {
   /* remove or override the shadow */
   box-shadow: none;
 }
+.yellow-box {
+  border: none !important;
+}
+.yellow-box {
+  border: none !important;
+}
