--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,18 @@ body {
   .heading-box {
     font-size: 1.1rem !important;
   }
+
+  .green-box.results strong {
+    font-size: 1rem !important;
+  }
+
+  .green-box.results div {
+    font-size: 1rem !important;
+  }
+
+  .green-box.results p {
+    font-size: 0.9rem !important;
+  }
 }
 
 /* Enhanced RESULTS PANEL Layout */
