--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ body {
   color: white;
   font-size: 1.4rem;
   cursor: pointer;
-  border: 1px solid white;
+  border: 2px solid white;
   border-radius: 8px;
   transition: background-color 0.3s;
   padding: 12px 48px;
@@ -137,7 +137,7 @@ body {
   padding: 40px 20px 20px;          /* extra top padding for heading overlap */
   border-radius: 0 0 20px 20px;
   border: 1px solid white;
-  background-color: #513786;
+  background-color: #2c135f;
   box-sizing: border-box;
   margin-bottom: 0;
 }
@@ -149,7 +149,7 @@ body {
   margin-bottom: .0rem;
   font-size: 2.5rem;
   font-weight: bold;
-  color: #0038FF;
+  color: #63d5ff;
   text-align: center;
 }
 
@@ -208,6 +208,7 @@ body {
   animation-play-state: paused;
 
 }
+
 
 
 
